# tfjs

./: .bazelignore  .bazelrc  .clang-format  .gitconfig  .gitignore  .gitmodules  .npmignore  .nycrc  .pylintrc  .travis.yml  BAZEL_MIGRATION.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_MISSING_OP.md  DEVELOPMENT.md  Dockerfile  GALLERY.md  ISSUE_TEMPLATE.md  Image_Classification_Using_SVM.ipynb  LICENSE  PULL_REQUEST_TEMPLATE.md  README  README.json.md  README.md  TransferLearningResnet50_(Image_classification).ipynb  WINDOWS_TROUBLESHOOTING.md  WORKSPACE  babel.config.json  binding.gyp  bower.json  build-libtensorflow-arm64.yml  cloudbuild-publish.yml  cloudbuild-release.yml  cloudbuild-verdaccio.yml  cloudbuild.yml  docker-compose.yml  esbuild.bzl  export.html  ini  (+27 more)
emscripten_toolchain/: BUILD.bazel  crosstool.bzl  emar.sh  emcc.sh  emcc_link.sh  emscripten.BUILD  emscripten_config  env.sh  link_wrapper.py  wasm_binary.py  wasm_cc_binary.bzl  wasm_rules.bzl
remote-execution/: BUILD.bazel
remote-execution/cpp/: BUILD.bazel
tfjs-backend-cpu/: .nycrc  BUILD.bazel  README.md  cloudbuild.yml  karma.conf.js  package.json  rollup.config.js  run_tests.ts  testlog.txt  tsconfig.json
tfjs-backend-cpu/scripts/: build-npm.sh  test-ci.sh
tfjs-backend-cpu/src/: BUILD.bazel  backend_cpu.ts  backend_cpu_test.ts  backend_cpu_test_envs.ts  backend_cpu_test_registry.ts  base.ts  cpu_util.ts  index.ts  register_all_kernels.ts  run_tests.ts  setup_test.ts  shared.ts  version.ts
tfjs-backend-cpu/tfjs-backend-cpu_lib/: BUILD.bazel  index.ts
tfjs-backend-wasm/: .bazelrc  .gitignore  .npmignore  BUILD  BUILD.bazel  README.md  WORKSPACE  build-relaxed-simd.sh  cloudbuild.yml  karma.conf.js  notes.txt  package.json  rollup.config.js  rollup_wechat.config.js  rollup_wechat.config.mjs  test.html  tsconfig.json  tsconfig.test.json
tfjs-backend-wasm/codegen/: package.json
tfjs-backend-wasm/scripts/: BUILD.bazel  build-benchmark.sh  build-ci.sh  build-npm.sh  build-wasm.sh  buildifier-ci.sh  cpplint.js  create-worker-module.js  create_worker_module.bzl  inline-worker.js  install-emsdk-ci.sh  link-core-master.js  patch-threaded-simd-module.js  patch-wechat-webassembly.js  patch_threaded_simd_module.bzl  patch_wechat_webassembly.ts  test-bundle-size-ci.sh  test-bundle-size.js  test-ci.sh  test-standalone.sh
tfjs-backend-wasm/src/: Add.ts  BUILD.bazel  BatchMatMul.ts  Cast.ts  Prelu.ts  Reshape.ts  all_kernels.ts  backend_wasm.ts  base.ts  flags_wasm.ts  index.ts  index_test.ts  kernels.cc  kernels.h  lib.cc  prejs.js  register_all_kernels.ts  setup_test.ts  test_node.ts  test_util.ts  util.h  version.ts  version_test.ts
tfjs-backend-wasm/toolchain/: BUILD  cc_toolchain_config.bzl  emar.sh  emcc.sh  emscripten-clang.BUILD  emscripten_threaded_module_prejs.js  false.sh
tfjs-backend-wasm/tools/: cpplint.py
tfjs-backend-wasm/wasm-out/: BUILD.bazel  tfjs-backend-wasm-simd.d.ts  tfjs-backend-wasm-threaded-simd.d.ts  tfjs-backend-wasm-threaded-simd.worker.ts  tfjs-backend-wasm.d.ts  tfjs-backend-wasm.worker.ts
tfjs-backend-wasm/wasm_parcel/: index.html  index.js  package.json
tfjs-backend-wasm/wasm_types/: BUILD.bazel  tfjs-backend-wasm.d.ts
tfjs-backend-webgl/: .npmignore  BUILD.bazel  README.md  cloudbuild.yml  karma.conf.js  package.json  rollup.config.js  tsconfig.test.json
tfjs-backend-webgl/scripts/: build-npm.sh  extract-kernel.ts  test-ci.sh
tfjs-backend-webgl/src/: BUILD.bazel  addn_gpu.ts  addn_packed_gpu.ts  argminmax_gpu.ts  argminmax_packed_gpu.ts  avg_pool_backprop_gpu.ts  backend_webgl.ts  backend_webgl_test.ts  backend_webgl_test_registry.ts  base.ts  batchnorm_gpu.ts  batchnorm_packed_gpu.ts  binaryop_complex_gpu.ts  binaryop_gpu.ts  binaryop_packed_gpu.ts  canvas_util.ts  canvas_util_test.ts  clip_gpu.ts  clip_packed_gpu.ts  commands.ts  compare_gpu.ts  concat_gpu.ts  concat_packed_gpu.ts  conv_backprop_gpu.ts  conv_backprop_gpu_depthwise.ts  conv_backprop_packed_gpu.ts  conv_dense_gpu_depthwise.ts  conv_gpu.ts  conv_gpu_dense.ts  conv_gpu_depthwise.ts  conv_packed_2x2_gpu.ts  conv_packed_gpu.ts  conv_packed_gpu_depthwise.ts  conv_packed_gpu_depthwise_nchw.ts  conv_packed_gpu_nchw.ts  crop_and_resize_gpu.ts  cum_gpu.ts  cumprod_gpu.ts  cumsum_gpu.ts  decode_matrix_gpu.ts  (+87 more)
tfjs-backend-webgl/tfjs-backend-webgl_lib/: BUILD.bazel  index.ts
tfjs-backend-webgpu/: BUILD.bazel  README.md  cloudbuild.yml  karma.conf.js  package.json  rollup.config.js  tsconfig.json  tsconfig.test.json
tfjs-backend-webgpu/benchmarks/: config.js  index.html  main.css  main.js  util.js
tfjs-converter/: .babelrc  .npmignore  BUILD.bazel  DEVELOPMENT.md  README.md  cloudbuild.yml  cloudbuild_nightly.yml  karma.conf.js  package.json  rollup.config.js  run_tests.ts  tfjs-core.json  tsconfig.json  tsconfig.test.json  tslint.json
tfjs-core/: .bazelrc  .npmignore  BUILD.bazel  README.md  cloudbuild.yml  karma.conf.js  package.json  rollup.config.js  setup_test_bazel.ts  test.html  tsconfig.json
tfjs-core/src/: log.ts  (+65 more)
tfjs-data/: .npmignore  .nycrc  BUILD.bazel  README.md  ROADMAP.md  cloudbuild.yml  karma.conf.js  package.json  rollup.config.js  tslint.json
tfjs-layers/: BUILD.bazel  DEVELOPMENT.md  LICENSE  README.md  cloudbuild.yml  karma.conf.js  package.json  rollup.config.js  tsconfig.json  tslint.json
tfjs-sentencepiece/: BUILD.bazel  package.json
tfjs-tfdf/: BUILD.bazel  README.md  package.json  tfdf_repositories.bzl
tfjs-tflite/: .gitignore  .npmignore  BUILD.bazel  README.md  cloudbuild.yml  karma.conf.js  myindex.html  package.json  rollup.config.js  start.sh  tflite_repositories.bzl  tsconfig.json
tools/: BUILD.bazel  clang_format_ts.sh  copy_to_dist.bzl  defaults.bzl  downlevel_to_es5_plugin.ts  enumerate-tests.ts  enumerate_tests.bzl  gen_json.bzl  gen_json.ts  get_extension.bzl  karma_template.conf.js  make_rollup_config.ts  make_version_test_file.bzl  make_version_test_file.ts  pb2json_converter.ts  rollup.config.js  rollup.es5.config.js  rollup_template.config.js  rollup_template.config.mjs  tfjs_bundle.bzl  tfjs_web_test.bzl  ts_library_outputs.bzl
(+5973 files in other folders)
