# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("@npm//@bazel/concatjs:index.bzl", "ts_config")
load("//tools:tfjs_web_test.bzl", "grep_flag")
load(":python_packages.bzl", "PYTHON_PACKAGES")
load(":python_toolchain.bzl", "configure_python_toolchains")

package(default_visibility = ["//visibility:public"])

exports_files([
    "babel.config.json",
    "tsconfig.json",
    "tsconfig_es5.json",
    "tsconfig.test.json",
    "tsconfig_ts_library.json",
])

ts_config(
    name = "tsconfig_ts_library",
    src = "tsconfig_ts_library.json",
    deps = [":tsconfig.json"],
)

configure_python_toolchains(
    platforms = PYTHON_PACKAGES,
)

grep_flag(
    name = "grep",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)
