# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm", "nodejs_test")
load("//tools:tfjs_bundle.bzl", "tfjs_bundle")
load("//tools:copy_to_dist.bzl", "copy_to_dist")


package(default_visibility = ["//visibility:public"])

nodejs_test(
    name = "tfjs-backend-cpu_test",
    entry_point = "//tfjs-backend-cpu/src:run_tests.ts",
    link_workspace_root = True,
    data = [
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_test_lib",
        "//tfjs-core:package_json",
    ],
    tags = ["ci"],
)

tfjs_bundle(
    name = "tf-backend-cpu",
    umd_name = "tf",
    entry_point = "//tfjs-backend-cpu/src:index.ts",
    external = [
        "node-fetch",
        "util",
    ],
    deps = [
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_lib",
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_src_lib",
    ],
)

filegroup(
    name = "es6_sources",
    srcs = [
      "//tfjs-backend-cpu/src:tfjs-backend-cpu_lib",
      "//tfjs-backend-cpu/src:tfjs-backend-cpu_src_lib",
    ],
    output_group = "es6_sources",
)

copy_to_dist(
    name = "copy_src_to_dist",
    srcs = [
        ":es6_sources",
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_lib",
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_src_lib",
    ],
    root = "src",
)

copy_to_dist(
    name = "copy_bundles",
    srcs = [
        ":tf-backend-cpu",
        ":tf-backend-cpu.min",
        ":tf-backend-cpu.es2017",
        ":tf-backend-cpu.es2017.min",
        ":tf-backend-cpu.fesm",
        ":tf-backend-cpu.fesm.min",
        ":tf-backend-cpu.node",
    ],
)

PKG_DEPS = [
    "//tfjs-backend-cpu/src:tfjs-backend-cpu_lib",
    "//tfjs-backend-cpu/src:tfjs-backend-cpu_src_lib",
]

pkg_npm(
    name = "tfjs-backend-cpu_pkg",
    srcs = ["package.json"],
    deps = [
        ":copy_src_to_dist",
        ":copy_bundles",
    ],
)
