# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "nodejs_test", "pkg_npm")
load("//tools:copy_to_dist.bzl", "copy_to_dist", "copy_ts_library_to_dist")
load("//tools:tfjs_bundle.bzl", "tfjs_bundle")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("//tools:tfjs_web_test.bzl", "tfjs_web_test")
load("//tools:tfjs_bundle.bzl", "tfjs_bundle")
load("//tools:get_extension.bzl", "get_extension")
load("//tfjs-backend-wasm/scripts:create_worker_module.bzl", "create_worker_module")
load("//tfjs-backend-wasm/scripts:patch_threaded_simd_module.bzl", "patch_threaded_simd_module")

package(default_visibility = ["//visibility:public"])

tfjs_bundle(
    name = "tf-backend-wasm",
    entry_point = "//tfjs-backend-wasm/src:index.ts",
    external = [
        "crypto",
        "@tensorflow/tfjs-core",
        "fs",
        "path",
        "worker_threads",
        "perf_hooks",
        "os",
    ],
    globals = {
        "@tensorflow/tfjs-core": "tf",
        "fs": "fs",
        "path": "path",
        "worker_threads": "worker_threads",
        "perf_hooks": "perf_hooks",
    },
    umd_name = "tf.wasm",
    deps = [
        "//tfjs-backend-wasm/src:tfjs-backend-wasm_lib",
        "//tfjs-backend-wasm/src:tfjs-backend-wasm_src_lib",
    ],
)

copy_ts_library_to_dist(
    name = "copy_src_to_dist",
    srcs = [
        "//tfjs-backend-wasm/src:tfjs-backend-wasm_lib",
        "//tfjs-backend-wasm/src:tfjs-backend-wasm_src_lib",
    ],
    root = "src",
)

copy_to_dist(
    name = "copy_bundles",
    srcs = [
        ":tf-backend-wasm",
        ":tf-backend-wasm.es2017",
        ":tf-backend-wasm.es2017.min",
        ":tf-backend-wasm.fesm",
        ":tf-backend-wasm.fesm.min",
        ":tf-backend-wasm.min",
        ":tf-backend-wasm.node",
    ],
)

copy_file(
    name = "copy_miniprogram",
    src = ":tf-backend-wasm.min.js",
    out = "dist/miniprogram/index.js",
)

copy_file(
    name = "copy_miniprogram_map",
    src = ":tf-backend-wasm.min.js.map",
    out = "dist/miniprogram/index.js.map",
)

pkg_npm(
    name = "tfjs-backend-wasm_pkg",
    package_name = "@tensorflow/tfjs-backend-wasm",
    srcs = [
        "README.md",
        "package.json",
    ],
    tags = ["ci"],
    deps = [
        ":copy_bundles",
        ":copy_miniprogram",
        ":copy_miniprogram_map",
        ":copy_src_to_dist",
        "//tfjs-backend-wasm/wasm-out",
    ],
)

# TODO(mattsoulanille): This test uses the default chrome flags and tests
# the simd implementation. We should also test the non-simd implementation and
# the threaded implementation. When writing those tests, also try to depend on
# only the required wasm outputs, since it takes a long time to compile them.
tfjs_web_test(
    name = "tfjs-backend-wasm_test",
    srcs = [
        "//tfjs-backend-wasm/src:tfjs-backend-wasm_test_bundle",
    ],
    static_files = [
        "//tfjs-backend-wasm/src:tfjs-backend-wasm_test_bundle",
        "//tfjs-backend-wasm/wasm-out",
    ],
    tags = ["ci"],
)

nodejs_test(
    name = "tfjs-backend-wasm_node_test",
    data = [
        "//tfjs-backend-wasm/src:tfjs-backend-wasm_src_lib",
        "//tfjs-backend-wasm/src:tfjs-backend-wasm_test_lib",
        "//tfjs-backend-wasm/wasm-out",
        ":package_json",
    ],
    entry_point = "//tfjs-backend-wasm/src:test_node.ts",
    tags = ["ci"],
)

js_library(
    name = "package_json",
    package_name = "tfjs-backend-wasm",
    srcs = [
        ":package.json",
    ],
)
