# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("//tools:copy_to_dist.bzl", "copy_to_dist")
load("//tools:tfjs_bundle.bzl", "tfjs_bundle")
load("//tools:tfjs_web_test.bzl", "tfjs_web_test")
load("//tools:ts_library_outputs.bzl", "ts_library_outputs")

package(default_visibility = ["//visibility:public"])

tfjs_bundle(
    name = "tf-backend-webgl",
    entry_point = "//tfjs-backend-webgl/src:index.ts",
    external = [
        "crypto",
        "node-fetch",
        "util",
        "@tensorflow/tfjs-core",
        "seedrandom",
    ],
    globals = {
        "@tensorflow/tfjs-core": "tf",
        "seedrandom": "seedrandom",
    },
    umd_name = "tf",
    deps = [
        "//tfjs-backend-webgl/src:tfjs-backend-webgl_lib",
        "//tfjs-backend-webgl/src:tfjs-backend-webgl_src_lib",
    ],
)

ts_library_outputs(
    name = "tfjs-backend-webgl_outputs",
    srcs = [
        "//tfjs-backend-webgl/src:tfjs-backend-webgl_lib",
        "//tfjs-backend-webgl/src:tfjs-backend-webgl_src_lib",
    ],
)

copy_to_dist(
    name = "copy_src_to_dist",
    srcs = [
        ":tfjs-backend-webgl_outputs",
    ],
    root = "src",
)

copy_to_dist(
    name = "copy_bundles",
    srcs = [
        ":tf-backend-webgl",
        ":tf-backend-webgl.es2017",
        ":tf-backend-webgl.es2017.min",
        ":tf-backend-webgl.fesm",
        ":tf-backend-webgl.fesm.min",
        ":tf-backend-webgl.min",
    ],
)

copy_file(
    name = "copy_miniprogram",
    src = ":tf-backend-webgl.min.js",
    out = "dist/miniprogram/index.js",
)

copy_file(
    name = "copy_miniprogram_map",
    src = ":tf-backend-webgl.min.js.map",
    out = "dist/miniprogram/index.js.map",
)

pkg_npm(
    name = "tfjs-backend-webgl_pkg",
    srcs = ["package.json"],
    tags = ["ci"],
    deps = [
        ":copy_bundles",
        ":copy_miniprogram",
        ":copy_miniprogram_map",
        ":copy_src_to_dist",
    ],
)

tfjs_web_test(
    name = "tfjs-backend-webgl_test",
    srcs = [
        "//tfjs-backend-webgl/src:tfjs-backend-webgl_test_bundle",
    ],
    browsers = [
        "bs_chrome_mac",
        "bs_firefox_mac",
        "bs_safari_mac",
        "bs_ios_11",
        "bs_android_9",
        "win_10_chrome",
    ],
    static_files = [
        # Listed here so sourcemaps are served
        "//tfjs-backend-webgl/src:tfjs-backend-webgl_test_bundle",
        # For the webworker
        ":tf-backend-webgl.min.js",
        ":tf-backend-webgl.min.js.map",
        "//tfjs-backend-cpu:tf-backend-cpu.min.js",
        "//tfjs-backend-cpu:tf-backend-cpu.min.js.map",
        "//tfjs-core:tf-core.min.js",
        "//tfjs-core:tf-core.min.js.map",
    ],
)
