# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "pkg_npm")
load("//tools:copy_to_dist.bzl", "copy_to_dist")
load("//tools:tfjs_bundle.bzl", "tfjs_bundle")

package(default_visibility = ["//visibility:public"])

tfjs_bundle(
    name = "tf-backend-webgpu",
    entry_point = "//tfjs-backend-webgpu/src:index.ts",
    external = [
        "node-fetch",
        "util",
    ],
    umd_name = "tf",
    deps = [
        "//tfjs-backend-webgpu/src:tfjs-backend-webgpu_lib",
        "//tfjs-backend-webgpu/src:tfjs-backend-webgpu_src_lib",
    ],
)

filegroup(
    name = "es6_sources",
    srcs = [
        "//tfjs-backend-webgpu/src:tfjs-backend-webgpu_lib",
        "//tfjs-backend-webgpu/src:tfjs-backend-webgpu_src_lib",
    ],
    output_group = "es6_sources",
)

filegroup(
    name = "es5_sources",
    srcs = [
        "//tfjs-backend-webgpu/src:tfjs-backend-webgpu_lib",
        "//tfjs-backend-webgpu/src:tfjs-backend-webgpu_src_lib",
    ],
    output_group = "es5_sources",
)

copy_to_dist(
    name = "copy_src_to_dist",
    srcs = [
        ":es5_sources",
        ":es6_sources",
        "//tfjs-backend-webgpu/src:tfjs-backend-webgpu_lib",
        "//tfjs-backend-webgpu/src:tfjs-backend-webgpu_src_lib",
    ],
    root = "src",
)

copy_to_dist(
    name = "copy_bundles",
    srcs = [
        ":tf-backend-webgpu",
        ":tf-backend-webgpu.es2017",
        ":tf-backend-webgpu.es2017.min",
        ":tf-backend-webgpu.fesm",
        ":tf-backend-webgpu.fesm.min",
        ":tf-backend-webgpu.min",
    ],
)

pkg_npm(
    name = "tfjs-backend-webgpu_pkg",
    srcs = ["package.json"],
    tags = ["ci"],
    deps = [
        ":copy_bundles",
        ":copy_src_to_dist",
    ],
)

js_library(
    name = "package_json",
    srcs = [
        ":package.json",
    ],
)
